--- a/springboot-mybatis-plus/pom.xml
+++ b/springboot-mybatis-plus/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>fastjson2</artifactId>
         </dependency>
 
+        <!-- FastJSON 1.x (兼容旧代码) -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
         <!-- Gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
